Se completaron las páginas Contacto, Proyecto e Index, se agregaron scripts

--- a/ProyectoFinal/html/contacto.html
+++ b/ProyectoFinal/html/contacto.html
@@ -69,11 +69,14 @@
 
     <main class = "content">
         <section class = "text">
-            <h2 class = "saludo">Hola, soy Fulano</h2>
+            <h2>Contacto</h2>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Iste laborum totam molestiae tenetur nesciunt quasi quia, nulla blanditiis ut 
-                eveniet? Quae non illum sequi quos et ad, iure alias ipsam.
+            <p>
+                <ul class = "listado">
+                    <li><i class="fa-solid fa-envelope"></i>lisa.hudson@example.com</li>
+                    <li><i class="fa-solid fa-phone"></i>(306) 665-6825</li>
+                    
+                </ul>
             </p>
         </section>
         
