--- a/ProyectoFinal/html/index.html
+++ b/ProyectoFinal/html/index.html
@@ -69,15 +69,24 @@
 
     <main class = "content">
         <section class = "text">
-            <h2 class = "saludo">Hola, soy Fulano</h2>
+            <h1 class = "saludo" id="animate-text">Hola, soy Lisa Hudson</h1>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Iste laborum totam molestiae tenetur nesciunt quasi quia, nulla blanditiis ut 
-                eveniet? Quae non illum sequi quos et ad, iure alias ipsam.
+            <div class="container">
+                <img class = "img_profile" src="../img/retrato.jpg" alt="flores">
+                <div class = "overlay">
+                  <div class="nombre">Fulano</div>
+                </div>
+              </div>
+            
+            <p>
+                Soy una programadora junior diligente con experiencia en aplicaciones
+                comerciales. Soy hábil en el desarrollo de planes, gestión de proyectos,
+                y en la documentación del usuario.
             </p>
         </section>
         
     </main>
     <script src="../js/script.js"></script>
+    <script src="../js/titulos.js"></script>
 </body>
 </html>
