--- a/ProyectoFinal/html/proyectos.html
+++ b/ProyectoFinal/html/proyectos.html
@@ -69,12 +69,17 @@
 
     <main class = "content">
         <section class = "text">
-            <h2 class = "saludo">Hola, soy Fulano</h2>
+            <h2 class = "saludo">Proyectos</h2>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Iste laborum totam molestiae tenetur nesciunt quasi quia, nulla blanditiis ut 
-                eveniet? Quae non illum sequi quos et ad, iure alias ipsam.
+            <p>
+                Para conocer los proyectos, seguí el siguiente enlace
             </p>
+            <br>
+            <ul class = "listado">
+                <li>
+                    <i class="fa-brands fa-github"></i><a href = "https://github.com/IsabellaMuroni">Repositorio</a>
+                </li>
+            </ul>
         </section>
         
     </main>
