Se agregaron los últimos cambios. Proyecto terninado.

--- a/ProyectoFinal/html/index.html
+++ b/ProyectoFinal/html/index.html
@@ -24,28 +24,28 @@
         <nav>
             <ul>
                 <li>
-                    <a href = "index.html">
+                    <a href = "index.html" title = "Home">
                         <i class="fa-sharp fa-solid fa-house"></i>
                         <span class = "links_name">Home</span>
                     </a>
                     <span class = "tooltip">Home</span>
                 </li>
                 <li>
-                    <a href = "perfil.html">
+                    <a href = "perfil.html" title = "Perfil">
                         <i class="fa-sharp fa-solid fa-user"></i>
                         <span class = "links_name">Perfil</span>
                     </a>
                     <span class = "tooltip">Perfil</span>
                 </li>
                 <li>
-                    <a href = "proyectos.html">
+                    <a href = "proyectos.html" title = "Proyecto">
                         <i class="fa-sharp fa-solid fa-folder"></i>
                         <span class = "links_name">Proyectos</span>
                     </a>
                     <span class = "tooltip">Proyectos</span>
                 </li>
                 <li>
-                    <a href = "contacto.html">
+                    <a href = "contacto.html" title = "Contacto">
                         <i class="fa-sharp fa-solid fa-address-book"></i>
                         <span class = "links_name">Contacto</span>
                     </a>
@@ -61,7 +61,7 @@
                     <div class = "job">Programadora</div>
                 </div>
             </div>
-            <a href = "https://www.linkedin.com/in/isabellanievamuroni/">
+            <a href = "https://www.linkedin.com/in/isabellanievamuroni/" title = "Linkedin">
                 <i class="fa-brands fa-linkedin" id="linkedin"></i>
             </a>
         </div>
@@ -69,12 +69,12 @@
 
     <main class = "content">
         <section class = "text">
-            <h1 class = "saludo" id="animate-text">Hola, soy Lisa Hudson</h1>
+            <h1 class = "saludo" id = "animate-text">Hola, soy Lisa Hudson</h1>
 
             <div class="container">
-                <img class = "img_profile" src="../img/retrato.jpg" alt="flores">
+                <img class = "img_profile" src = "../img/retrato.jpg" alt = "foto de perfil">
                 <div class = "overlay">
-                  <div class="nombre">Fulano</div>
+                  <div class = "nombre">Lisa Hudson</div>
                 </div>
               </div>
             
