--- a/ProyectoFinal/html/proyectos.html
+++ b/ProyectoFinal/html/proyectos.html
@@ -24,28 +24,28 @@
         <nav>
             <ul>
                 <li>
-                    <a href = "index.html">
+                    <a href = "index.html" title = "Home">
                         <i class="fa-sharp fa-solid fa-house"></i>
                         <span class = "links_name">Home</span>
                     </a>
                     <span class = "tooltip">Home</span>
                 </li>
                 <li>
-                    <a href = "perfil.html">
+                    <a href = "perfil.html" title = "Perfil">
                         <i class="fa-sharp fa-solid fa-user"></i>
                         <span class = "links_name">Perfil</span>
                     </a>
                     <span class = "tooltip">Perfil</span>
                 </li>
                 <li>
-                    <a href = "proyectos.html">
+                    <a href = "proyectos.html" title = "Proyecto">
                         <i class="fa-sharp fa-solid fa-folder"></i>
                         <span class = "links_name">Proyectos</span>
                     </a>
                     <span class = "tooltip">Proyectos</span>
                 </li>
                 <li>
-                    <a href = "contacto.html">
+                    <a href = "contacto.html" title = "Contacto">
                         <i class="fa-sharp fa-solid fa-address-book"></i>
                         <span class = "links_name">Contacto</span>
                     </a>
@@ -61,7 +61,7 @@
                     <div class = "job">Programadora</div>
                 </div>
             </div>
-            <a href = "https://www.linkedin.com/in/isabellanievamuroni/">
+            <a href = "https://www.linkedin.com/in/isabellanievamuroni/" title = "Linkedin">
                 <i class="fa-brands fa-linkedin" id="linkedin"></i>
             </a>
         </div>
@@ -69,7 +69,7 @@
 
     <main class = "content">
         <section class = "text">
-            <h2 class = "saludo">Proyectos</h2>
+            <h2 class = "saludo" id = "animate-text">Proyectos</h2>
 
             <p>
                 Para conocer los proyectos, seguí el siguiente enlace
@@ -77,12 +77,14 @@
             <br>
             <ul class = "listado">
                 <li>
-                    <i class="fa-brands fa-github"></i><a href = "https://github.com/IsabellaMuroni">Repositorio</a>
+                    <i class="fa-brands fa-github"></i><a href = "https://github.com/IsabellaMuroni" title = "Repositorio">Repositorio</a>
                 </li>
             </ul>
+
         </section>
         
     </main>
     <script src="../js/script.js"></script>
+    <script src = "../js/titulos.js"></script>
 </body>
 </html>
